@@ -25,7 +25,6 @@ import org.apache.commons.lang3.StringUtils;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Logger;
 
@@ -42,7 +41,7 @@ public class FFMPEGLocator {
         this.ffprobe = ffprobe;
     }
 
-    private static final List<AbstractFFMPEGLocator> LOCATORS = Arrays.asList(
+    private static final List<AbstractFFMPEGLocator> LOCATORS = List.of(
             new WindowsFFMPEGLocator(), new MacFFMPEGLocator(), new LinuxFFMPEGLocator()
     );
 
